[package]
name = "homeofficetracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
crossterm = "0.28.1"
dirs = "6.0.0"
ratatui = "0.29.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
